5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1637_2447.log
== TEST (2019-04-09 11:28:29) 
-- CODE:
preco= float(input("custo:"))
paga= float(input("pago:"))

Falta X= preco-paga
Troco de Y= paga-preco

if(preco>paga):
	print(round(Falta X,2))
else:
	print(round(Troco de Y,2))
-- ERROR:
File "XXXX", line 4
    Falta X= preco-paga
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:29:52) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

Falta X= p-q
Troco de Y= p-q

if(p>q):
	print(round(Falta X,2))
else:
	print(round(Troco de Y,2))
-- ERROR:
File "XXXX", line 4
    Falta X= p-q
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:30:10) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

Falta X= p-q
Troco de Y= q-p

if(p>q):
	print(round(Falta X,2))
else:
	print(round(Troco de Y,2))
-- ERROR:
File "XXXX", line 4
    Falta X= p-q
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:32:08) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

Falta X= p-q
Troco de Y= q-p

if(p > q):
	print(round(Falta X,2))
else(q > p):
	print(round(Troco de Y,2))
-- ERROR:
File "XXXX", line 4
    Falta X= p-q
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:33:00) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

faltax= p-q
trocodey= q-p

if(p > q):
	print(round(faltax,2))
else:
	print(round(trocodey,2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:33:09) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

faltax= p-q
trocodey= q-p

if(p > q):
	print(round(faltax,2))
else:
	print(round(trocodey,2))
-- EXECUTION TIME:
0.183012
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:33:24) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

faltax= p-q
trocodey= q-p

if(p > q):
	print(round(faltax,2))
else:
	print(round(trocodey,2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:35:16) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print(round(Falta x,2))
else:
	print(round(Troco de y,2))
-- ERROR:
File "XXXX", line 8
    print(round(Falta x,2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:35:40) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print(round("Falta" x,2))
else:
	print(round("Troco de" y,2))
-- ERROR:
File "XXXX", line 8
    print(round("Falta" x,2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:39) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print(Falta, round(x,2))
else:
	print(Troco de, round(y,2))
-- ERROR:
File "XXXX", line 10
    print(Troco de, round(y,2))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:51) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print(Falta,round(x,2))
else:
	print(Troco de,round(y,2))
-- ERROR:
File "XXXX", line 10
    print(Troco de,round(y,2))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:25) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:41:33) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.217091
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
